# models

./: .gitignore  .gitmodules  .ignore  OVMS_CONFIG_FORMAT.md  README.md  README_ovms_manager.md  bench.py  bench.sh  export.py  export.sh  hf.py  llamacpp.sh  models.txt  openarc-entrypoint.sh  openarc.sh  ovms.sh  ovms_config.json  ovms_manager.py  ovms_test_config.json  package-lock.json  pyproject.toml  sglang.sh  vllm.sh  vllm.yaml
.agent/rules/: dry.md  shell.md  venv.md
.kilo/plans/: 1777743350942-hidden-canyon.md  1778863853047-tidy-planet.md
agents-docker/: .dockerignore  .envrc  .gitignore  Dockerfile  Dockerfile.fedora  agents-cli  agents-cli-bwrap  build.sh  cleanup-volumes.sh  create-ssh-overlay-host.sh  entrypoint.sh  fetch-free-models.py  model-tester.py  package-lock.json  package.json  pi-install-wrapper.sh  setup-agent.sh  versions.env
agents-docker/agents-watchdog/: watchdog.py
agents-docker/mnn/: inference_cli
honcho-setup/: start-honcho.sh
llama.cpp-setup/: build.sh  llama-cpp-intel.Dockerfile  llama-cpp-vulkan.Dockerfile  llamacpp.sh
mnn/: inference_cli.py
openarc-setup/: .envrc  add.sh  build.sh  exec.sh  openarc-entrypoint.sh  openarc.sh
ovms/: OVMS_CONFIG_FORMAT.md  ovms.sh  ovms_config.json  ovms_manager.py
sglang-setup/: envrc  main.py  pyproject.toml  sglang.md
test/: test_hf.py  test_image.py  test_llm.py
utils/: bench.py  bench.sh  export.py  export.sh  hf  hf.py
vllm-setup/: entrypoint.sh  readme_vllm.md  vllm.sh  vllm.yaml
