[project]
name = "sglang-setup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cmake>=4.2.1",
    "easydict>=1.13",
    "intel-cmplr-lib-rt>=2025.3.2",
    "intel-sycl-rt>=2025.3.2",
    "numpy>=2.4.2",
    "pyyaml>=6.0.3",
    "setuptools>=80.10.2",
    "typing-extensions>=4.15.0",
]
